--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
 <!-- partial:index.partial.html -->
 <main>
-  <h1>Awesome Landing Page</h1>
+  <h1>Awesome Landing Page Awesome</h1>
   <a href="about.html">Read about me</a>
   <div class="key-features">
     <div class="feature">
-    <img src="images/money.png">
+    <img src="money.png">
     <p>Plant Trees</p></div>
     <div class="feature">
-      <img src="images/tree.png">
+      <img src="tree.png">
       <p>Make Friends</p>
     </div>
     <div class="feature">
-      <img src="images/money.png">
+      <img src="money.png">
       <p>Profit</p>
     </div>
   </div>
